--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,3 +1,26 @@
+@font-face {
+  font-family: 'Bellota Text';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Bellota Text Regular'), local('BellotaText-Regular'),
+    url(https://fonts.gstatic.com/s/bellotatext/v1/0FlTVP2VnlWS4f3-UE9hHXMx_tkPVy38Sw.woff2)
+      format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+    U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
+    U+FEFF, U+FFFD;
+}
+@font-face {
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Montserrat Regular'), local('Montserrat-Regular'),
+    url(https://fonts.gstatic.com/s/montserrat/v14/JTUSjIg1_i6t8kCHKm459WlhyyTh89Y.woff2)
+      format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+    U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
+    U+FEFF, U+FFFD;
+}
+
 .card {
   display: flex;
   flex-direction: column;
@@ -9,7 +32,24 @@
 
 .card-title {
   font-size: 1.6rem;
+  font-family: 'Bellota Text', cursive;
 }
 .card-text {
   font-size: 3.5rem;
+  font-family: 'Montserrat', cursive;
+}
+
+.github {
+  font-family: 'Bellota Text', cursive;
+  padding: 30px;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+}
+#pr {
+  text-decoration: none;
+  color: black;
+}
+#pr:hover {
+  color: palevioletred;
 }
