removed floating footer

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,9 +1,5 @@
-.footer {
-  margin: 10%;
-}
-
 .footnote {
-  font-family: 'Bellota Text', cursive;
+  font-family: "Bellota Text", cursive;
   font-size: small;
 }
 .disclaimer {
